<resources>
    <string name="app_name">Materiais</string>
    <string name="ma_tv_nome">Produto</string>
    <string name="ma_et_nome" />
    <string name="ma_tv_codigo">Codigo</string>
    <string name="ma_et_codigo" />
    <string name="ma_ch_plastico">Plastico</string>
    <string name="ma_ch_metal">Metal</string>
    <string name="ma_ch_papel">Papel</string>
    <string name="ma_ch_organico">Organico</string>
    <string name="ma_bt_ok">ok</string>
    <string name="ma_rd_sim">SIM</string>
    <string name="ma_rd_nao">NÃO</string>
    <string name="ma_tv_reciclavel">Reciclável?</string>
    <string name="ma_tv_material">Material</string>
</resources>
